@@ -1,7 +1,6 @@
 package com.saymyname.webapp.mapper.challenge;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -21,20 +20,23 @@ public class ChallengeMenuDtoMapper {
     }
 
     public ChallengeMenu toModel(ChallengeMenuDto dto) {
-        if (dto == null) {
+        if (dto == null)
             return null;
-        }
+
         List<com.saymyname.core.model.challenge.ChallengeSortCriterion> sorts = null;
         if (dto.sorts() != null) {
             sorts = dto.sorts().stream()
                     .map(challengeSortCriterionDtoMapper::toModel)
-                    .collect(Collectors.toList());
+                    .toList();
         }
-        return new ChallengeMenu(
-                dto.userId(),
-                dto.seasonStart(), // Utilise directement la date
-                dto.search(),
-                challengeFiltersDtoMapper.toModel(dto.filters()),
-                sorts);
+
+        // ⚠️ On ne met PAS userId ici (plus dans le DTO)
+        ChallengeMenu menu = new ChallengeMenu();
+        menu.setSeasonStart(dto.seasonStart());
+        menu.setSearch(dto.search());
+        menu.setFilters(challengeFiltersDtoMapper.toModel(dto.filters()));
+        menu.setSorts(sorts);
+        // menu.setUserId(null); // laissé à null : sera injecté en service
+        return menu;
     }
 }
